# joke-cli

./: Cargo.toml  README.md
src/: jokes.rs  main.rs
